--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -120,7 +120,8 @@ a {
 /* !                                 CONTENT                                  */
 /* ! ------------------------------------------------------------------------ */
 
-button {
+button,
+a {
   padding: 1.5rem 2.5rem;
   font-weight: 500;
   border-radius: 0.4rem;
@@ -148,4 +149,106 @@ button {
   background-color: #000;
   border: 0.1rem solid #000;
   color: #fff;
+}
+
+.mobile-navbar-container {
+  display: none;
+}
+
+.desktop-navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10svh;
+}
+
+.logo-container {
+  width: 15%;
+}
+
+.logo-container img {
+}
+
+section {
+  height: 90svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-banner-section {
+  background: rgb(246, 253, 255);
+  background: rgb(246, 253, 255);
+  background: linear-gradient(
+    114deg,
+    rgba(246, 253, 255, 1) 67%,
+    rgba(219, 247, 255, 1) 67%,
+    rgba(178, 235, 255, 1) 73%,
+    rgba(141, 221, 255, 1) 79%,
+    rgba(141, 221, 255, 1) 85%,
+    rgba(101, 210, 255, 1) 92%,
+    rgba(5, 153, 255, 1) 100%
+  );
+}
+
+.hero-banner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.side-a {
+  height: 100%;
+  width: 55%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 4rem;
+}
+
+.side-b {
+  height: 100%;
+  width: 45%;
+  position: relative;
+}
+
+.side-b::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50rem;
+  background-color: transparent;
+  background: url("../media/img/product.png") no-repeat center center/cover;
+  z-index: 1;
+}
+
+.side-b div {
+  width: 100%;
+  height: 50rem;
+}
+
+.side-a__buttons {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+}
+
+h1 {
+  font-size: 5rem;
+  font-weight: 500;
+  line-height: 1.2;
+  color: #000;
+}
+
+h2 {
+  font-size: 3rem;
+  font-weight: 500;
+  line-height: 1.2;
+  color: #000;
 }
