--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -166,9 +166,6 @@ a {
   width: 15%;
 }
 
-.logo-container img {
-}
-
 section {
   height: 90svh;
   display: flex;
@@ -207,12 +204,39 @@ section {
   justify-content: center;
   align-items: flex-start;
   gap: 4rem;
+  padding-right: 10rem;
+}
+
+.section-title {
+  margin-bottom: -2rem;
 }
 
 .side-b {
   height: 100%;
   width: 45%;
   position: relative;
+}
+
+.side-b div {
+  width: 100%;
+  height: 50rem;
+}
+
+.side-c {
+  height: 100%;
+  width: 45%;
+}
+
+.side-c div {
+  width: 100%;
+  height: 50rem;
+}
+
+.side-c div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.4rem;
 }
 
 .side-b::after {
@@ -225,11 +249,6 @@ section {
   background-color: transparent;
   background: url("../media/img/product.png") no-repeat center center/cover;
   z-index: 1;
-}
-
-.side-b div {
-  width: 100%;
-  height: 50rem;
 }
 
 .side-a__buttons {
@@ -247,8 +266,84 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 500;
   line-height: 1.2;
   color: #000;
+}
+
+p {
+  font-size: 1.8rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #000;
+}
+
+.full-fleet-visibility-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reliable-software-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reliable-software-container div:last-child {
+  padding-left: 5rem;
+}
+
+.reliable-software-container__img-container,
+.reliable-software-container__text-container {
+  text-align: right;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: column;
+  gap: 4rem;
+}
+
+.reliable-software-container div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0.4rem;
+}
+
+.reliable-software-container__buttons {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+}
+
+footer {
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem 0;
+  color: #fff;
+}
+
+.footer-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item.copyright {
+  color: #fff;
 }
