--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -167,10 +167,11 @@ a {
 }
 
 section {
-  height: 90svh;
+  height: 80svh;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 5rem;
 }
 
 .hero-banner-section {
@@ -346,4 +347,39 @@ footer {
 
 .item.copyright {
   color: #fff;
+}
+
+h3 {
+  font-size: 9rem;
+}
+
+.section-get-a-tour {
+  background-color: #000;
+  color: #fff;
+  padding: 5rem 0;
+  height: 10svh;
+}
+
+.stats-container {
+  width: 100%;
+  height: 30rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5rem 0;
+}
+
+.single-stat {
+  width: 28%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.single-stat p {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.5;
 }
