--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -155,6 +155,17 @@ a {
 /* !                                 MAP                                      */
 /* ! ------------------------------------------------------------------------ */
 
+.map-section {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5rem;
+  padding: 5rem 0;
+}
+
 .mapboxgl-ctrl-bottom-right,
 .mapboxgl-ctrl-bottom-left {
   display: none !important;
@@ -163,15 +174,19 @@ a {
 #map {
   width: 1200px;
   height: 600px;
-  margin: 20px auto;
-  border-radius: 0.4rem;
   background-color: #aeaeae;
 }
 
+.map-container {
+  position: relative;
+  border: 0.1rem solid #000;
+  border-radius: 0.4rem;
+}
+
 #fly-btn {
-    position: relative;
-    bottom: 100px;
-    left: calc(80% - 40px);
+    position: absolute;
+    bottom: 1.5rem;
+    right: 1.5rem;
     visibility: hidden;
     margin: 0;
     padding: 0;
