--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -184,21 +184,21 @@ a {
 }
 
 #fly-btn {
-    position: absolute;
-    bottom: 1.5rem;
-    right: 1.5rem;
-    visibility: hidden;
-    margin: 0;
-    padding: 0;
-    height: 50px;
-    width: 50px;
-    border-radius: 50px;
-    background-color: #0599ff;
+  position: absolute;
+  bottom: 1.5rem;
+  right: 1.5rem;
+  visibility: hidden;
+  margin: 0;
+  padding: 0;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+  background-color: #0599ff;
 }
 
 #fly-btn i {
-    font-size: 25px;
-    color: #fff;
+  font-size: 25px;
+  color: #fff;
 }
 
 .mobile-navbar-container {
@@ -212,6 +212,10 @@ a {
   height: 10svh;
 }
 
+.desktop-navbar-container button {
+  padding: 1rem 2.5rem;
+}
+
 .logo-container {
   width: 15%;
 }
@@ -221,7 +225,6 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 5rem;
 }
 
 .hero-banner-section {
@@ -260,6 +263,10 @@ section {
 
 .section-title {
   margin-bottom: -2rem;
+}
+
+.stats-section__background h2 {
+  text-align: center;
 }
 
 .side-b {
@@ -401,13 +408,17 @@ footer {
 
 h3 {
   font-size: 9rem;
+  color: #67c1fd;
+}
+
+.section-get-a-tour h3 {
+  font-size: 9rem;
+  color: #67c1fd;
 }
 
 .section-get-a-tour {
-  background-color: #000;
-  color: #fff;
-  padding: 5rem 0;
-  height: 10svh;
+  background: url("../media/img/tour.jpg") no-repeat center bottom / cover;
+  height: 60svh;
 }
 
 .stats-container {
@@ -423,9 +434,11 @@ h3 {
   width: 28%;
   height: 100%;
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 2rem;
+  text-align: center;
 }
 
 .single-stat p {
