--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -175,6 +175,7 @@ a {
   width: 1200px;
   height: 500px;
   background-color: #aeaeae;
+  border-radius: 0.4rem;
 }
 
 .map-container {
@@ -413,6 +414,11 @@ h3 {
 
 .section-get-a-tour h3 {
   font-size: 9rem;
+  color: #67c1fd;
+}
+
+.section-get-a-tour a:hover {
+  text-decoration: underline;
   color: #67c1fd;
 }
 
