--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -158,6 +158,7 @@ a {
 .map-section {
   width: 100%;
   height: 100%;
+  padding: 0 5rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -172,7 +173,7 @@ a {
 }
 
 #map {
-  width: 1200px;
+  width: 100%;
   height: 500px;
   background-color: #aeaeae;
   border-radius: 0.4rem;
@@ -180,6 +181,7 @@ a {
 
 .map-container {
   position: relative;
+  width: calc(100% - 0px);
   border: 0.1rem solid #000;
   border-radius: 0.4rem;
 }
