Added links hover effect

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -151,6 +151,10 @@ a {
   color: #fff;
 }
 
+a:hover {
+  color: #0599ff;
+}
+
 /* ! ------------------------------------------------------------------------ */
 /* !                                 MAP                                      */
 /* ! ------------------------------------------------------------------------ */
