--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -155,6 +155,10 @@ a:hover {
   color: #0599ff;
 }
 
+.hero-banner-section a {
+  padding: 0;
+}
+
 /* ! ------------------------------------------------------------------------ */
 /* !                                 MAP                                      */
 /* ! ------------------------------------------------------------------------ */
